FINALLY THE ROCK HAS COME BACK TO WRESTLEMANIA

--- a/Matplotlib Challenge/Continue.ipynb
+++ b/Matplotlib Challenge/Continue.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +10,9 @@
     "\n",
     "### Analysis\n",
     "\n",
-    "- Add your analysis here.\n",
+    "There seems to be a strong correlation between mouse weight and tumor volume for the Capomulin Drug Regimen. The correlation value is 0.66. From the scatterplot for the Capomulin drug regimen there is a positive correlation between average tumor size and weight.\n",
+    "\n",
+    "In the boxplot, there is an outlier for the Ibunifol drug.\n",
     " "
    ]
   },
